--- a/packages/server-auto/package.json
+++ b/packages/server-auto/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server-auto",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "{{description}}",
   "private": true,
   "dependencies": {
-    "midway": "^1.0.0",
-    "egg-scripts": "^2.10.0"
+    "egg-scripts": "^2.10.0",
+    "midway": "^1.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
@@ -14,10 +14,10 @@
     "egg-ci": "^1.8.0",
     "midway-bin": "1",
     "midway-mock": "1",
-    "tslib": "^1.8.1",
-    "tslint-midway-contrib": "1",
     "ts-node": "^8.3.0",
+    "tslib": "^1.8.1",
     "tslint": "^5.11.0",
+    "tslint-midway-contrib": "1",
     "typescript": "^3.5.0"
   },
   "engines": {
